# Adv-Robo-2019-SPR

./: .gitignore  Lab 2 notes  README.md
A1.1/: Lab 1 notes  Terminal command
A1.1/bayes_filter/: CMakeCache.txt  CMakeLists.txt  Makefile  bayes_filter.cpp  cmake_install.cmake
A1.2/particle_filter_localisation/src/: particle_filter_localisation.cpp
A2/: pathfinding notes
A2/astar_path_planner/: QUESTION.txt
A2/astar_path_planner/src/: node.cpp
catkin_ws/devel/: .catkin  .rosinstall  local_setup.sh  setup.sh
catkin_ws/devel/lib/astar_path_planner/: astar_path_planner
catkin_ws/devel/lib/particle_filter_localisation/: particle_filter_localisation
catkin_ws/devel/lib/pkgconfig/: astar_path_planner.pc  particle_filter_localisation.pc
catkin_ws/src/astar_path_planner/: package.xml
catkin_ws/src/astar_path_planner/launch/: astar_path_planner.launch
catkin_ws/src/astar_path_planner/src/: astar_path_planner.cpp  marker.cpp  occupancy_grid.cpp  open_set.cpp
catkin_ws/src/particle_filter_localisation/src/: Particle filter implementation notes  particle_filter_localisation.cpp
catkin_ws2/devel/: .catkin  local_setup.sh  setup.sh
catkin_ws2/devel/lib/astar_path_planner/: astar_path_planner
catkin_ws2/src/astar_path_planner/: CMakeLists.txt  QUESTION.txt
catkin_ws2/src/astar_path_planner/include/astar_path_planner/: closed_set.h  marker.h  open_set.h
catkin_ws2/src/astar_path_planner/src/: astar_path_planner.cpp  closed_set.cpp  occupancy_grid.cpp  open_set.cpp
catkin_ws2/src/astar_path_planner/srv/: PlanPath.srv
(+11 files in other folders)
